# gnome-shell-extension-quiet-shortcuts

./: README.md  extension.js  gnome-shell-extension-quiet-shortcuts.spec.in  meson.build  metadata.json
debian/: changelog  control  install
quiet-shortcuts@lernstick.ch/: extension.js  metadata.json
